--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="script.js"></script>
+    <script src="angkot1.js"></script>
   </body>
 </html>
