--- a/Dasar/LATIHAN/index.html
+++ b/Dasar/LATIHAN/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="p-k_p-u_bersarang.js"></script>
+    <script src="tebak-angka.js"></script>
   </body>
 </html>
