--- a/Dasar/Pengulangan dan Pengkondisian/index.html
+++ b/Dasar/Pengulangan dan Pengkondisian/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="switch.js"></script>
+    <script src="suwit.js"></script>
   </body>
 </html>
