--- a/Dasar/Array/index.html
+++ b/Dasar/Array/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="beda-rekursif-dan-looping.js"></script>
+    <script src="contoh-array.js"></script>
   </body>
 </html>
